# org

./: .gitignore  .kazelcfg.json  .travis.yml  .travis.yml.disabled  Gopkg.toml  OWNERS  README.md  WORKSPACE  config.yaml  go.mod
.github/ISSUE_TEMPLATE/: general-support.md  integrations.md  repo-create.md
.github/workflows/: config-pr.yaml  config-push.yaml  config.yaml  verify-and-deploy.yml  verify-and-test.yml
.github_tmp_disabled/ISSUE_TEMPLATE/: membership.md  repo-archive.md
.github_tmp_disabled/workflows/: verify-and-deploy.yml  verify-and-test.yml
admin/: BUILD.bazel
config/: config_test.go
config/lenferink/: org.yaml
config/lenferink/test/: teams.yaml
hack/boilerplate/: boilerplate.Makefile.txt  boilerplate.go.txt
