PERIBOLOS = "@io_k8s_test_infra//prow/cmd/peribolos"

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    args = [
        "$(location %s)" % PERIBOLOS,
        "--config-path",
        "$(location //config:config.yaml)",
        "--fix-org",
        "--fix-org-members",
        "--fix-repos",
        "--fix-teams",
        "--fix-team-members",
        "--min-admins=2",
        "--required-admins=rlenferink",
        "--required-admins=rlenferink-bot",
    ],
    data = [
        "//config:config.yaml",
        PERIBOLOS,
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
